--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 	<script src="vendor/underscore/underscore-min.js"></script>
 	<script src="vendor/morris.js/morris.min.js"></script>
 	<script src="vendor/raphael/raphael-min.js"></script>
+    <script src="vendor/jquery.sparkline/dist/jquery.sparkline.js"></script>
 	
 	<script src="https://cdn.firebase.com/js/client/2.0.6/firebase.js"></script>
 	<script src="https://cdn.firebase.com/libs/angularfire/0.9.1/angularfire.min.js"></script>
